fixed alignment for contact icons

--- a/css/main.css
+++ b/css/main.css
@@ -449,7 +449,7 @@ h4 {
     font-weight:200;
     /*text-transform: uppercase;*/
     font-size: 24pt;
-    /*line-height: 30pt;*/
+    line-height: 28pt;
     letter-spacing: .05em;
     /*position: inline-block;*/
     margin-top: 0px;
@@ -507,7 +507,9 @@ a {
 }
 
 
-
+#contact-intro {
+    text-align: center;
+}
 
     #contact-text {
         text-align: left;
@@ -542,7 +544,7 @@ a {
             font-style: normal;
             font-weight: 400;
             font-size: 80pt;
-            line-height: 40pt;
+            line-height: 60pt;
             color: #c59900;
         }
 
@@ -590,8 +592,13 @@ img {
     max-width: 960px;
     text-align: center;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 
+}
+
+#contact-center.mobile {
+    text-align: left;
+    padding-left: 0px;
 }
 
 /*#contact-imgs {
@@ -605,7 +612,7 @@ img {
 }*/
 
 #contact-boxes {
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 0px;
     padding-right: 0px;
@@ -616,11 +623,17 @@ img {
 }
 
 #contact-container {
-    padding-bottom: 40px;
+    padding-bottom: 10px;
+}
+#contact-container.mobile {
+    text-align: left;
+
 }
 
-#contact-boxes.mobile {x
+#contact-boxes.mobile {
     text-align: left;
+    float: none;
+    display: block;
 
 }
 
